<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Emergency_Contacts"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerg1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerg2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerg3"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/phone3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerg4"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/phone4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerg5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/phone5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
           />

        <Button
            android:id="@+id/register"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="235dp"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>